[package]
name = "geolo-view"
version = "0.1.0"
authors = ["snghojeong <snghojeong@gmail.com>"]
edition = "2018"

[lib]
name = "geolo_view"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.pyo3]
version = "0.11.1"
features = ["extension-module"]

[dependencies.rev_lines]
git = "https://github.com/snghojeong/rev_lines.git"
branch = "feature/seek-pos"
